# PCPC

./: README.md
CalcCoefficient/: .~lock.target_th_1210.csv#  0deg.csv  1205_th.csv  1205_x.csv  1220_y.csv  27deg.csv  45Coef.csv  45deg.csv  45deg_coef  45deg_sup_coef  CMakeCache.txt  CMakeLists.txt  CalcCoef_0deg.sh  CalcCoef_45deg.sh  CalcCoef_90deg.sh  CalcCoef_target_th.sh  CalcCoef_target_x_1210.sh  CalcCoef_th_start.sh  CalcCoef_x_start.sh  CalcCoef_x_start_check_0-6.sh  CalcCoef_x_start_check_12-18.sh  CalcCoef_x_start_check_18-24.sh  CalcCoef_x_start_check_6-12.sh  CalcCoef_x_stop_1st_half.sh  CalcCoef_x_stop_1st_half_check_0-6.sh  CalcCoef_x_stop_2nd_half.sh  CalcCoef_x_stop_2nd_half_check_0-6.sh  CalcCoef_x_th.sh  CalcCoef_x_walking.sh  CalcCoef_x_walking_check_12-18.sh  CalcCoef_x_walking_check_18-30.sh  CalcCoef_x_walking_check_6_12.sh  CalcCoef_y_start.sh  CalcCoef_y_start_check_0-6.sh  CalcCoef_y_stop_2nd_half.sh  CalcCoef_y_walking.sh  Makefile  check_sup_diff.csv  cmake_install.cmake  coef_x_start.csv  (+27 more)
CheckCoefficient/: 1129-main.cpp  1204-main.cpp  45_prev.csv  45deg.csv  45deg_check.xlsx  45deg_log  63deg_log  90deg.csv  90deg_check.xlsx  CMakeCache.txt  CMakeLists.txt  CheckCoefficient  base_main.cpp  draw_trajectory_x_0_19_y-0_1-x_0_29_y_0_05.plt  draw_trajectory_x_0_19_y_0_0-x_0_29_y_0_1.plt  gggg.csv  main.cpp  tem.csv  test.cs  test.csv  trajectory_x_0_29_y_0_1.csv
old_GWP/: 1-data.csv  CMakeCache.txt  CMakeLists.txt  CalcCoef_x_walking_check-m30-30.sh  FootPlanner.cpp  FootPlanner.h  Makefile  PlanCommon.h  PreviewControl.h  cmake_install.cmake  combine.ods  draw_target_graph.plt  get_vel.sh  (+11 more)
(+159 files in other folders)
